# autolycus-agent

./: .email_state.json  .env.example  .gitignore  .hadolint.yaml  .kanboard_check_state  .kanboard_last_check  .last_mail_check  .new_messages.json  AGENTS.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  Dockerfile  FIX_HERMES_CADUCEUS.md  LICENSE  README.md  README.zh-CN.md  RELEASE_v0.0.1.md  RELEASE_v0.0.2.md  RELEASE_v0.0.3.md  RELEASE_v0.0.5.md  RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  RELEASE_v0.15.0.md  SECURITY.md  batch_runner.py  check_all_mail.py  check_bodies.py  check_mail.py  check_mail2.py  check_mail_all.py  check_mail_recent.py  check_recent.py  check_recent_mail.py  cli-config.yaml.example  cli.py  cli.py.bak.vision  comm_bridge.py  constraints-termux.txt  docker-compose.windows.yml  docker-compose.yml  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.plans/: openai-api-server.md  streaming-support.md
PLANS/: freebsd-audit.md  freebsd-installation-test.md  task-coordination.md
RELEASES/: RELEASE_v0.0.1.md  RELEASE_v0.0.2.md  RELEASE_v0.0.3.md  RELEASE_v0.0.4.md  RELEASE_v0.0.5.md  RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  v0.1.2.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.2.0.md  v0.2.1.md  v0.2.2.md
acp_adapter/: __init__.py  auth.py  edit_approval.py  entry.py  events.py  permissions.py  provenance.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  antigravity_code_assist.py  antigravity_oauth.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  (+65 more)
comm/: Cargo.toml  README.md  __init__.py  test_comm.py  tools.py
comm/src/: bridge.rs  config.rs  discovery.rs  lib.rs  matrix.rs
(+3597 files in other folders)
