[package]
name = "lycus-comm"
version = "0.1.0"
edition = "2021"
description = "Lycus inter-agent communication module using Matrix protocol"

[lib]
name = "lycus_comm"
crate-type = ["rlib"]

[dependencies]
# Matrix client library
ruma = { version = "0.10", default-features = false, features = ["events", "api"] }
ruma-client = { version = "0.10", default-features = false, features = ["reqwest-native-tls", "client-api"] }
ruma-client-api = "0.15"
ruma-common = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
config = "0.13"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }